// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correct display for cities There are some cities in the store 1`] = `
<div>
  <div>
    <div
      className="fav_cities"
    >
      Избранное
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        className="city_input"
        name="city"
        required={true}
        type="text"
      />
      <input
        className="city_button"
        type="submit"
        value="Добавить"
      />
    </form>
  </div>
  <div
    className="weather"
  >
    <div
      className="weather"
    >
      <div
        className="left"
      >
        <div>
          Moscow
        </div>
        <img
          src="https://openweathermap.org/img/wn/50n.png"
        />
        <div>
          -269
           °C
        </div>
        <button
          className="button"
          onClick={[Function]}
        >
          Удалить
        </button>
      </div>
      <div
        className="right"
      >
        <div
          className="pressure"
        >
          Давление: 
          1015
           hPa
        </div>
        <div
          className="humidity"
        >
          Влажность: 
          100
          %
        </div>
        <div
          className="clouds"
        >
          Облачность: 
          mist
        </div>
        <div
          className="wind"
        >
          Ветер: 
          4
           м/с
        </div>
        <div
          className="coords"
        >
          Координаты: [
          37.62
          , 
          55.75
          ]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Correct display for cities There aren't any cities in the store 1`] = `
<div>
  <div>
    <div
      className="fav_cities"
    >
      Избранное
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        className="city_input"
        name="city"
        required={true}
        type="text"
      />
      <input
        className="city_button"
        type="submit"
        value="Добавить"
      />
    </form>
  </div>
  <div
    className="weather"
  />
</div>
`;

exports[`Some error with displaying cities There are some cities in the store 1`] = `
<div>
  <div>
    <div
      className="fav_cities"
    >
      Избранное
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        className="city_input"
        name="city"
        required={true}
        type="text"
      />
      <input
        className="city_button"
        type="submit"
        value="Добавить"
      />
    </form>
  </div>
  <div
    className="error"
  >
    Error: 
    error
  </div>
  <div
    className="weather"
  >
    <div
      className="weather"
    >
      <div
        className="left"
      >
        <div>
          Moscow
        </div>
        <img
          src="https://openweathermap.org/img/wn/50n.png"
        />
        <div>
          -269
           °C
        </div>
        <button
          className="button"
          onClick={[Function]}
        >
          Удалить
        </button>
      </div>
      <div
        className="right"
      >
        <div
          className="pressure"
        >
          Давление: 
          1015
           hPa
        </div>
        <div
          className="humidity"
        >
          Влажность: 
          100
          %
        </div>
        <div
          className="clouds"
        >
          Облачность: 
          mist
        </div>
        <div
          className="wind"
        >
          Ветер: 
          4
           м/с
        </div>
        <div
          className="coords"
        >
          Координаты: [
          37.62
          , 
          55.75
          ]
        </div>
      </div>
    </div>
    <div
      className="weather"
    >
      <div
        className="left"
      >
        <div>
          Moscow
        </div>
        <img
          src="https://openweathermap.org/img/wn/50n.png"
        />
        <div>
          -269
           °C
        </div>
        <button
          className="button"
          onClick={[Function]}
        >
          Удалить
        </button>
      </div>
      <div
        className="right"
      >
        <div
          className="pressure"
        >
          Давление: 
          1015
           hPa
        </div>
        <div
          className="humidity"
        >
          Влажность: 
          100
          %
        </div>
        <div
          className="clouds"
        >
          Облачность: 
          mist
        </div>
        <div
          className="wind"
        >
          Ветер: 
          4
           м/с
        </div>
        <div
          className="coords"
        >
          Координаты: [
          37.62
          , 
          55.75
          ]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Some error with displaying cities There aren't any cities in the store 1`] = `
<div>
  <div>
    <div
      className="fav_cities"
    >
      Избранное
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        className="city_input"
        name="city"
        required={true}
        type="text"
      />
      <input
        className="city_button"
        type="submit"
        value="Добавить"
      />
    </form>
  </div>
  <div
    className="error"
  >
    Error: 
    error
  </div>
  <div
    className="weather"
  />
</div>
`;
